--- a/script/firstGraphic.html
+++ b/script/firstGraphic.html
@@ -5,6 +5,8 @@
   <script src="https://d3js.org/d3.v4.min.js"></script>
 </head>
   <body>
+
     <script type="text/javascript" src="firstGraphic.js"></script>
+    <script type="text/javascript" scr="HistogramDataMiner.js"></script>
   </body>
 </html>
