--- a/script/firstGraphic.html
+++ b/script/firstGraphic.html
@@ -4,10 +4,11 @@
   <title>Histogram Plot</title>
   <script src="https://d3js.org/d3.v4.min.js"></script>
   <script src="https://www.promisejs.org/polyfills/promise-7.0.4.min.js"></script>
+
+  <script type="text/javascript" src="HistogramDataMiner.js"></script>
+  <script type="text/javascript" src="Histogram.js"></script>
+  <script type="text/javascript" src="firstGraphic.js"></script>
 </head>
   <body>
-
-    <script type="text/javascript" src="firstGraphic.js"></script>
-    <script type="text/javascript" src="HistogramDataMiner.js"></script>
   </body>
 </html>
