Fixed graph data generation

--- a/script/firstGraphic.html
+++ b/script/firstGraphic.html
@@ -8,6 +8,7 @@
   <script type="text/javascript" src="HistogramDataMiner.js"></script>
   <script type="text/javascript" src="Histogram.js"></script>
   <script type="text/javascript" src="firstGraphic.js"></script>
+  <script type="text/javascript" src="GraphDataMiner.js"></script>
 </head>
   <body>
   </body>
