--- a/script/firstGraphic.html
+++ b/script/firstGraphic.html
@@ -7,6 +7,7 @@
 
   <script type="text/javascript" src="HistogramDataMiner.js"></script>
   <script type="text/javascript" src="Histogram.js"></script>
+  <script type="text/javascript" src="HorizontalHistogram.js"></script>
   <script type="text/javascript" src="firstGraphic.js"></script>
   <script type="text/javascript" src="GraphDataMiner.js"></script>
 </head>
