Organizing visualiztions together

--- a/script/firstGraphic.html
+++ b/script/firstGraphic.html
@@ -5,12 +5,28 @@
   <script src="https://d3js.org/d3.v4.min.js"></script>
   <script src="https://www.promisejs.org/polyfills/promise-7.0.4.min.js"></script>
 
+    <!-- Compiled and minified CSS -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.99.0/css/materialize.min.css">
+
+  <!-- Compiled and minified JavaScript -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.99.0/js/materialize.min.js"></script>
+       
   <script type="text/javascript" src="HistogramDataMiner.js"></script>
   <script type="text/javascript" src="Histogram.js"></script>
   <script type="text/javascript" src="HorizontalHistogram.js"></script>
-  <script type="text/javascript" src="firstGraphic.js"></script>
+  <script type="text/javascript" src="ForceDirectedGraph.js"></script>
+  <script type="text/javascript" src="HeatMap.js"></script>
   <script type="text/javascript" src="GraphDataMiner.js"></script>
+  <script type="text/javascript" src="firstGraphic.js"></script>
+  
 </head>
   <body>
+    <div class="container">
+      
+    <div class="row histograms">
+    </div>
+    <div class="row fdg">
+    </div>
+    </div>
   </body>
 </html>
