--- a/site-app/public/index.html
+++ b/site-app/public/index.html
@@ -20,6 +20,9 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Student Visualization</title>
+    <script src="https://d3js.org/d3.v4.min.js"></script>
+    <script src="https://www.promisejs.org/polyfills/promise-7.0.4.min.js"></script>
+
 
     <!-- Compiled and minified CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.99.0/css/materialize.min.css">
@@ -27,6 +30,13 @@
     <!-- Compiled and minified JavaScript -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.99.0/js/materialize.min.js"></script>
 
+    <script type="text/javascript" src="HistogramDataMiner.js"></script>
+    <script type="text/javascript" src="Histogram.js"></script>
+    <script type="text/javascript" src="HorizontalHistogram.js"></script>
+    <script type="text/javascript" src="ForceDirectedGraph.js"></script>
+    <script type="text/javascript" src="HeatMap.js"></script>
+    <script type="text/javascript" src="GraphDataMiner.js"></script>
+    <script type="text/javascript" src="firstGraphic.js"></script>
   </head>
   <body>
     <noscript>
