--- a/script/firstGraphic.html
+++ b/script/firstGraphic.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <meta charset="utf-8">
   <title>Histogram Plot</title>
   <script src="https://d3js.org/d3.v4.min.js"></script>
   <script src="https://www.promisejs.org/polyfills/promise-7.0.4.min.js"></script>
@@ -11,6 +12,7 @@
   <!-- Compiled and minified JavaScript -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.99.0/js/materialize.min.js"></script>
        
+  <script type="text/javascript" src="MatrixDataMiner.js"></script>
   <script type="text/javascript" src="HistogramDataMiner.js"></script>
   <script type="text/javascript" src="Histogram.js"></script>
   <script type="text/javascript" src="HorizontalHistogram.js"></script>
@@ -27,6 +29,8 @@
     </div>
     <div class="row fdg">
     </div>
+    <div class="row chart"></div>
     </div>
+
   </body>
 </html>
