Adding a strange tooltip in heatmap

--- a/script/firstGraphic.html
+++ b/script/firstGraphic.html
@@ -20,7 +20,21 @@
   <script type="text/javascript" src="HeatMap.js"></script>
   <script type="text/javascript" src="GraphDataMiner.js"></script>
   <script type="text/javascript" src="firstGraphic.js"></script>
-  
+  <style type="text/css">
+    div.tooltip {
+
+      position: absolute;
+      text-align: center;
+      width: 80px;
+      height: 40px;
+      padding: 2px;
+      font: 12px sans-serif;
+      background: lightsteelblue;
+      border: 0px;
+      border-radius: 8px;
+      pointer-events: none;
+    }
+  </style>  
 </head>
   <body>
     <div class="container">
